--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio</title>
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header>
         <nav>
-        <img src="assets/codigo-certo.png" alt="logo da Codigo Certo">
-            <a href="#sobre">Sobre</a>
-            <a href="#gostos">Gostos Pessoais</a>
-            <a href="#motivacoes">Motivações</a>
+            <div class="logo"><img src="assets/codigo-certo.png" alt="logo da Codigo Certo"></div>
+            <div class="menu">
+                <a href="#sobre">Sobre</a>
+                <a href="#gostos">Gostos Pessoais</a>
+                <a href="#motivacoes">Motivações</a>
+            </div>
         </nav>
     </header>
 
@@ -22,7 +24,7 @@
                 <h1 class="titulo">Sobre</h1>
                 <img src="assets/perfilcartoon.jpeg" class="foto-perfil" alt="Minha foto em cartoon">
                 <p>Olá, Me chamo Igor Henrique, estudante de <strong>Ciência da Computação</strong> na Faculdade Descomplica. </p>
-                <p>Estou em busca de oportunidades para realizar transição de carreira, aplicando meus conhecimentos recém-adquiridos em desenvolvimento de software e aproveitando minha sólida experiência técnica em manutenção eletroeletrônica. Com formação em Análise e Desenvolvimento de Sistemas pela UNIP e cursos complementares em <strong>JavaScript, <abbr title="Hypertext Markup Language">HTML5</abbr>, <abbr title="Cascading Style Sheets">CSS3</abbr> e Java</strong> estou preparado para enfrentar os desafios do desenvolvimento. Minha trajetória profissional inclui posições como Eletricista de Manutenção e Oficial de Manutenção Elétrica, onde desenvolvi habilidades em diagnóstico, reparo e gestão de projetos. Estou ansioso para aplicar minha habilidade técnica e atenção aos detalhes em um novo contexto, contribuindo para o desenvolvimento de soluções inovadoras em programação.
+                <p>Estou em busca de oportunidades para realizar transição de carreira, aplicando meus conhecimentos recém-adquiridos em desenvolvimento de software e aproveitando minha sólida experiência técnica em manutenção eletroeletrônica. Com formação em Análise e Desenvolvimento de Sistemas pela UNIP e cursos complementares em <strong><abbr title="Hypertext Markup Language">HTML5</abbr>, <abbr title="Cascading Style Sheets">CSS3</abbr>, JavaScript, React e Java</strong> estou preparado para enfrentar os desafios do desenvolvimento. Minha trajetória profissional inclui posições como Eletricista de Manutenção e Oficial de Manutenção Elétrica, onde desenvolvi habilidades em diagnóstico, reparo e gestão de projetos.
                 </p>
                 <h2>Acesse minhas redes:</h2>
                 <div class="minhas-redes">
@@ -30,13 +32,12 @@
                         <img src="./assets/github.png">GitHub</a>
                     <a class="minhas-redes-navegacao" href="https://www.linkedin.com/in/igorhgds">
                         <img src="./assets/linkedin.png">Linkedin</a>
-                    <a class="minhas-redes-navegacao" href="https://www.instagram.com/igorhgds/">
-                        <img src="./assets/instagram.png"> Instagram</a>
                 </div>
                 <div class="tecnologias">
                     <abbr title="HTML5"><img class="tecnologias-logo" src="./assets/iconhtml.png" alt="Logo html"></abbr>
                     <abbr title="CSS3"><img class="tecnologias-logo" src="./assets/iconcss.png" alt="Logo css"></abbr>
                     <abbr title="JavaScript"><img class="tecnologias-logo" src="./assets/iconjs.png" alt="Logo JavaScript"></abbr>
+                    <abbr title="React"><img class="tecnologias-logo" src="./assets/iconreact.png" alt="Logo React"></abbr>
                     <abbr title="Java"><img class="tecnologias-logo" src="./assets/iconjava.png" alt="Logo Java"></abbr>
                 </div>
             </article> <!--apresentacao-sobre-->
@@ -48,7 +49,7 @@
 
             <article class="apresentacao-motivacoes" id="motivacoes">
                 <h1 class="titulo">Motivações</h1>
-                <p>Minha maior motivação na carreira é porque permite criar soluções impactantes que melhoram a vida das pessoas e enfrentar desafios constantes de forma criativa. Além disso, oferece flexibilidade, oportunidades de crescimento profissional e a chance de contribuir significativamente para o futuro da tecnologia. Por isso estou sempre em busca de aprender mais e me aprimorar, com a Comunidade Código Certo posso me desenvolver e dar um passo a mais para ganhar experiências e adquirir networkig.</p>
+                <p>Minha maior motivação na carreira é por permitir criar soluções impactantes que melhoram a vida das pessoas e enfrentar desafios constantes de forma criativa. Além disso, oferece flexibilidade, oportunidades de crescimento profissional e a chance de contribuir significativamente para o futuro da tecnologia. Por isso estou sempre em busca de aprender mais e me aprimorar.</p>
             </article> <!--apresentacao-motivacoes-->
         </section>
     </main>
